# celestial-ui

./: .gitignore  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  ConsoleWindow.tsx  fonts.css  luaparse.d.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: console.json  default.json  desktop.json  roblox-login.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  cookies.rs  exec_server.rs  execution.rs  filtering.rs  history.rs  hubble.rs  lib.rs  logs.rs  main.rs  rpc.rs
src/assets/: Icons.tsx  inf.avif  morf.avif  nameless.avif  placeholder.avif  von.avif
src/components/: ScriptCard.tsx  SidebarButton.module.css  SidebarButton.tsx  TrafficLights.module.css  TrafficLights.tsx
src/components/editor/: AccountsPanel.tsx  CodeEditor.tsx  EditorShared.module.css  Explorer.tsx  HistoryPanel.tsx  contextMenuPosition.ts  sidePanelMotion.ts
src/components/ui/: Checkbox.module.css  Field.module.css  Input.module.css  Label.module.css  Select.module.css  Slider.module.css  Toaster.module.css  UiPrimitives.module.css  button-group.tsx  button.tsx  checkbox.tsx  field.tsx  input.tsx  kbd.tsx  label.tsx  (+3 more)
src/contexts/: SettingsContext.tsx
src/pages/: Console.module.css  Console.tsx  Editor.tsx  Library.tsx  MultiInstance.module.css  MultiInstance.tsx  Settings.tsx  StatsTab.tsx
src/services/: rscripts.ts  scriptblox.ts
src/styles/: AppShell.module.css  SettingsSurface.module.css  fonts.css  globals.css  scrollbar.css
src/utils/: appData.ts  defs.ts  fontConfig.ts  keybinds.ts  scriptUtils.ts  template.ts  ui.ts  validator.ts
(+11 files in other folders)
